# mdvi

./: Cargo.toml
.github/workflows/: build-portable-binaries.yml
scripts/: release.sh
src/: app.rs  lib.rs  main.rs  renderer.rs
xtask/: Cargo.toml
xtask/src/: main.rs
