[package]
name = "mdvi"
version = "0.6.3"
edition = "2021"
description = "Professional markdown viewer for the terminal with Vim-style navigation"
license = "MIT"
readme = "README.md"
keywords = ["markdown", "cli", "viewer", "terminal", "tui"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
pulldown-cmark = "0.12"
ratatui = "0.29"
regex = "1.11"
image = "0.25"
ratatui-image = { version = "8.1", default-features = false, features = ["crossterm", "image-defaults"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
toml = "0.8"
unicode-width = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
