[package]
name = "mdvi"
version = "0.6.9"
edition = "2021"
description = "Professional markdown viewer for the terminal with Vim-style navigation"
license = "MIT"
readme = "README.md"
keywords = ["markdown", "cli", "viewer", "terminal", "tui"]
categories = ["command-line-utilities", "text-processing"]

[workspace]
members = ["xtask"]
resolver = "2"

[lib]
name = "mdvi"
path = "src/lib.rs"

[[bin]]
name = "mdvi"
path = "src/main.rs"
required-features = ["app"]

[features]
default = ["app", "images"]
app = [
    "dep:arboard",
    "dep:clap",
    "dep:crossterm",
    "dep:directories",
    "dep:image",
    "dep:ratatui-image",
    "dep:regex",
    "dep:reqwest",
    "dep:serde",
    "dep:toml",
    "dep:unicode-width",
    "ratatui/crossterm",
]
images = ["dep:regex"]

[dependencies]
anyhow = "1.0"
pulldown-cmark = "0.12"
ratatui = { version = "0.29", default-features = false }
regex = { version = "1.11", optional = true }
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }

# App-only dependencies (feature-gated behind `app`)
arboard = { version = "3.6", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
crossterm = { version = "0.28", optional = true }
directories = { version = "5.0", optional = true }
image = { version = "0.25", optional = true }
ratatui-image = { version = "8.1", default-features = false, features = ["crossterm", "image-defaults"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
unicode-width = { version = "0.1", optional = true }

[profile.release]
lto = true
codegen-units = 1
strip = true
